Add task with Foursquare API

--- a/Foursquare/NearEats/Podfile
+++ b/Foursquare/NearEats/Podfile
@@ -1,11 +1,11 @@
 # Uncomment the next line to define a global platform for your project
 platform :ios, '16.0'
 
-target 'MultithreadingShips' do
+target 'NearEats' do
 
   use_frameworks!
 
-  # UI
-  pod 'SnapKit'
+  # Authorization
+  pod 'OAuthSwift'
 
 end
